--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
 - '2.7'
+install: pip install -r requirements.pip
+script: nosetests
 deploy:
   provider: s3
   access_key_id: AKIAJFUG3JRNHEBLCCGQ
