consistent stream naming

--- a/dervish.properties
+++ b/dervish.properties
@@ -1,5 +1,5 @@
 executableName = dervish.py
-streamName = dervisher
+streamName = dervish
 applicationName = dervish
 AWSCredentialsProvider = DefaultAWSCredentialsProviderChain
 processingLanguage = python/2.7
