--- a/dervish.properties
+++ b/dervish.properties
@@ -1,4 +1,4 @@
-executableName = dervish.py
+executableName = dervish
 streamName = dervish
 applicationName = dervish
 AWSCredentialsProvider = DefaultAWSCredentialsProviderChain
