consist entry point names

--- a/dervish.properties
+++ b/dervish.properties
@@ -1,4 +1,4 @@
-executableName = dervish
+executableName = whirling.py
 streamName = dervish
 applicationName = dervish
 AWSCredentialsProvider = DefaultAWSCredentialsProviderChain
